# ai-language-partner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  ruff.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt
apps/api/app/: __init__.py  dialogue_match.py  learner_model.py  main.py  paths.py  persona_voices.json  providers.py  rate_limit.py  reputation_model.py  safety.py  seed.py  store.py  voice_catalog.json
apps/api/scripts/: backend_benchmark_105.py  evaluate_learner_model.py  evaluate_reputation_model.py  import_jlpt_pack.py  run_due_content_releases.py  serve_demo.py  setup_stt.sh  setup_voice_engine.sh  validate_openapi_contract.py  verify_docker_smoke.py  verify_external_provider_readiness.py  verify_hosted_scheduler_readiness.py  verify_redis_rate_limit_readiness.py
apps/api/tests/: test_api_contract.py  test_main_security_boundaries.py  test_store_identity_security.py
authoring/: batch_tts.py  gen_variants.py  generate_seed_bank.py  seed_bank_summary.json  validate_bank.py  variants.csv  weekly_expand.py
contracts/: README_API_CONTRACT.md  events.yaml  openapi_v0.yaml
docs/: ARCHITECTURE.md  CLAUDE_FOR_OSS_ACCOUNT_AUDIT.md  CLAUDE_FOR_OSS_APPLICATION.md  CLAUDE_FOR_OSS_PHASE_A_SUBMISSION.md  _config.yml  index.md
scripts/: apply_discovery_labels.py  (+34 more)
(+267 files in other folders)
