[project]
name = "ai-language-partner-api"
version = "0.1.0"
description = "Backend API for AI Language Partner Mobile"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0,<0.140.0",
    "uvicorn[standard]>=0.51.0,<0.52.0",
    "pydantic>=2.13.4,<2.14.0",
    "cryptography>=48.0.1,<49.0.0",
    "genanki>=0.13.1,<0.14.0",
    "redis>=6.4.0,<8.1.0",
    "python-multipart>=0.0.32,<0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<9.2.0",
    "httpx>=0.28.1,<0.29.0",
    "PyYAML>=6.0.3,<6.1.0",
    "ruff>=0.15.21,<0.16.0",
]
tts = ["edge-tts>=7.2.8,<7.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
